<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_40dp"
    tools:context=".SignUpActivity">
    <TextView
       android:id="@+id/buat_akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50dp"
        android:text="@string/txt_akun"
        android:textSize="@dimen/_36sp"
        android:textColor="@android:color/black"
        />

    <TextView
        android:id="@+id/make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cocoro"
        android:layout_below="@id/buat_akun"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/username"
    android:hint="@string/txt_user"
    android:layout_below="@id/make"
    android:layout_marginTop="@dimen/_60dp"
    android:layout_marginEnd="@dimen/_10dp"
    android:layout_marginStart="@dimen/_15dp"
    android:drawableStart="@drawable/ic_username"
    android:drawablePadding="@dimen/_16dp"
    android:inputType="textPersonName"
    android:autofillHints="" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_signup"
        android:hint="@string/txt_email_daftar"
        android:layout_below="@id/username"
        android:layout_marginEnd="@dimen/_10dp"
        android:layout_marginStart="@dimen/_15dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_16dp"
        android:inputType="textEmailAddress"
        tools:ignore="TextFields"
        android:autofillHints="" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_signup"
        android:hint="@string/txt_pwdSignup"
        android:layout_below="@id/email_signup"
        android:layout_marginEnd="@dimen/_10dp"
        android:layout_marginStart="@dimen/_15dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/_16dp"
        android:inputType="textPassword"
        tools:ignore="TextFields"
        android:autofillHints="" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confim_pwd"
        android:hint="@string/txt_confirm"
        android:layout_below="@id/password_signup"
        android:layout_marginEnd="@dimen/_10dp"
        android:layout_marginStart="@dimen/_15dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/_16dp"
        android:inputType="textPassword"
        tools:ignore="TextFields"
        android:autofillHints="" />
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confim_pwd"
        android:layout_marginTop="@dimen/_40dp"
        android:text="@string/txt_daftar"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/circle_button"
        android:textColor="@android:color/white"
        android:layout_marginStart="@dimen/_18dp"
        android:layout_marginEnd="@dimen/_16dp"
        />
    


</RelativeLayout>